user/deploy/kubernetes/objects/ingress-tls-internal.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: user-internal
  annotations:
    cert-manager.io/cluster-issuer: "service-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - INTERNAL_API_URL
    secretName: USER_INTERNAL_SECRET
  rules:
  - host: INTERNAL_API_URL
    http:
      paths:
      - path: /internal/
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3000
