user/deploy/kubernetes/objects/ingress-tls.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: user
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - USER_URL
    secretName: USER_SECRET
  rules:
  - host: USER_URL
    http:
      paths:
      - path: /device/
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3000
      - path: /withings/
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3000
      - path: /connect/garmin/
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 3000
